--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "facebook-nodejs-business-sdk": "^16.0.2",
+    "google-ads-api": "^12.0.1",
     "morgan": "^1.10.0",
     "morgan-json": "^1.1.0",
     "pocketbase": "^0.13.1",
